# mKit

./: .gitignore  LinearRegression.py  README.md  requirements.txt
linear_regression/: linear_regression.py
linear_regression/tests/: test_linear_regression.py
mKit/adaline/: adaline_gd.py  adaline_sgd.py
mKit/cc/: CMakeLists.txt
mKit/cc/helpers/: CMakeLists.txt  arange.cc  len.cc  zeros.cc
mKit/cc/perceptron/: CMakeLists.txt
mKit/cc/perceptron/include/: multi_layer_perceptron.h  multi_layer_perceptron.hpp
mKit/cc/perceptron/include/perceptron/: multi_layer_perceptron.h
mKit/cc/perceptron/src/: MultiLayerPerceptron.cpp  multi_layer_perceptron.cc
mKit/feature_selection/: sbs.py
mKit/feature_selection/tests/: test_feature_importance_ranking.py  test_sbs.py
mKit/perceptron/: mlp.py
mKit/perceptron/tests/: test_mlp.py
mKit/python/feature_selection/: feature_importance_ranking.py  sbs.py
mKit/python/feature_selection/tests/: test_feature_importance_ranking.py  test_sbs.py
mKit/python/perceptron/: mlp.py
mKit/python/perceptron/tests/: test_mlp.py
mKit/python/regression/: base.py
mKit/python/regression/tests/: test_logistic_regression.py
mKit/regression/: base.py  linear_regression.py  logistic_regression.py
mKit/regression/tests/: test_linear_regression.py
mKit/regression/tests/data/: test_data1.txt
